fix: exec at unix